--- a/Prospera/src/pages/Auth/Signup.css
+++ b/Prospera/src/pages/Auth/Signup.css
@@ -77,6 +77,7 @@
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  gap : 20px;
 }
 
 .submit {
@@ -88,6 +89,7 @@
   border-radius: 8px;
   cursor: pointer;
   transition: 0.3s ease;
+  text-decoration: none;
 }
 
 .submit:hover {
